# client-server-webrtc-example

basic/: index.html
basic/js/: main.js
basic/test/: test.js
client/: example-client.html  example-client.js
server/: CMakeLists.txt
server/lib/webrtc/lib/x64/Debug/pkgconfig/: libwebrtc_full.pc
server/src/: main.cpp  observers.h
